# pyrust_simple_paths

./: Cargo.toml  README.md  setup.py
src/: lib.rs
