[package]
name = "r_simple_paths"
version = "0.1.0"
authors = ["hochshi <hochshi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
petgraph = "0.5.1"
num-traits = "0.2.14"
indexmap = { version = "1.6.2" }

[lib]
name = "r_simple_paths"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]